--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     }
   },
   "dependencies": {
+    "awry-utilities": "1.0.101",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "body-parser": "^1.18.2",
@@ -144,12 +145,12 @@
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "opn": "^5.1.0",
-    "awry-utilities": "1.0.97",
     "prop-types": "^15.5.10",
     "react": "16.0.0-rc.3",
     "react-dom": "16.0.0-rc.3",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-masonry-component": "^6.0.2",
     "react-redux-loading-bar": "^2.9.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redbox-react": "^1.5.0",
@@ -188,7 +189,7 @@
     "file-loader": "^0.11.2",
     "flow-bin": "0.52.0",
     "image-webpack-loader": "^3.3.1",
-    "imports-loader": "^0.7.1",
+    "imports-loader": "^0.8.0",
     "jest": "^20.0.4",
     "nock": "^9.0.14",
     "node-sass": "^4.5.3",
