--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     }
   },
   "dependencies": {
-    "awry-utilities": "1.0.108",
+    "awry-utilities": "1.0.110",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "body-parser": "^1.18.2",
@@ -145,14 +145,17 @@
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "opn": "^5.1.0",
+    "pluralize": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "16.0.0-rc.3",
     "react-dom": "16.0.0-rc.3",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-infinite-scroller": "^1.1.3",
     "react-masonry-component": "^6.0.2",
     "react-redux-loading-bar": "^2.9.2",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-text-truncate": "^0.13.1",
     "redbox-react": "^1.5.0",
     "redis": "^2.8.0",
     "redux": "^3.7.2",
