--- a/package.json
+++ b/package.json
@@ -148,6 +148,8 @@
     "pluralize": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "16.0.0-rc.3",
+    "react-autolink-text": "^2.0.0",
+    "react-autolink-text2": "^3.2.0",
     "react-dom": "16.0.0-rc.3",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.6",
