--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "history": "^4.6.3",
     "hpp": "^0.2.2",
     "lodash": "^4.17.4",
+    "medium-draft": "^0.6.0-beta1",
     "morgan": "^1.8.2",
     "opn": "^5.1.0",
     "pluralize": "^7.0.0",
@@ -151,6 +152,7 @@
     "react-autolink-text": "^2.0.0",
     "react-autolink-text2": "^3.2.0",
     "react-dom": "16.0.0-rc.3",
+    "react-draft-wysiwyg": "^1.12.11",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-infinite-scroller": "^1.1.3",
@@ -165,6 +167,7 @@
     "request": "^2.83.0",
     "serialize-javascript": "^1.4.0",
     "serve-favicon": "^2.4.3",
+    "valid-url": "^1.0.9",
     "webpack-isomorphic-tools": "^3.0.3"
   },
   "devDependencies": {
