--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "jsx": "react"
+    "jsx": "react",
+    "target": "es5",
+    "lib": ["es2015", "es2017", "dom"]
   },
   "exclude": [
     "templateme"
