--- a/package.json
+++ b/package.json
@@ -131,10 +131,11 @@
   "dependencies": {
     "@types/react": "^16.3.10",
     "@types/react-dom": "^16.0.5",
-    "awry-utilities-2": "1.0.12",
+    "awry-utilities-2": "1.0.18",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "body-parser": "^1.18.2",
+    "browser-locale": "^1.0.3",
     "chalk": "^2.1.0",
     "compression": "^1.7.0",
     "compression-webpack-plugin": "^1.0.1",
@@ -148,6 +149,7 @@
     "medium-draft": "^0.6.0-beta1",
     "morgan": "^1.8.2",
     "opn": "^5.1.0",
+    "platform": "^1.3.5",
     "pluralize": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "16.3.0",
@@ -159,6 +161,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-infinite-scroller": "^1.1.3",
     "react-masonry-component": "^6.0.2",
+    "react-platform-js": "^0.0.1",
     "react-redux-loading-bar": "^2.9.2",
     "react-router-redux": "5.0.0-alpha.6",
     "react-text-truncate": "^0.13.1",
@@ -219,6 +222,7 @@
     "stylelint-webpack-plugin": "^0.9.0",
     "ts-loader": "3.5.0",
     "typescript": "^2.8.1",
+    "ui-component-loader": "^1.1.3",
     "url-loader": "^0.5.9",
     "webpack": "3.5.6",
     "webpack-dev-middleware": "^1.12.0",
