--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "jsx": "react",
-    "target": "es5",
+    "moduleResolution": "node",
+    "jsx": "preserve",
+    "target": "es6",
     "lib": ["es2015", "es2017", "dom"]
   },
   "exclude": [
