--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "awry-utilities-2": "1.0.18",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-typescript": "^7.0.0-alpha.19",
     "body-parser": "^1.18.2",
     "browser-locale": "^1.0.3",
     "chalk": "^2.1.0",
@@ -174,6 +175,7 @@
     "serve-favicon": "^2.4.3",
     "socket.io": "^2.1.0",
     "source-map-loader": "^0.2.3",
+    "uws": "^9.148.0",
     "valid-url": "^1.0.9",
     "webpack-isomorphic-tools": "^3.0.3"
   },
@@ -221,6 +223,7 @@
     "stylelint-config-standard": "^17.0.0",
     "stylelint-webpack-plugin": "^0.9.0",
     "ts-loader": "3.5.0",
+    "ts-node": "^6.0.2",
     "typescript": "^2.8.1",
     "ui-component-loader": "^1.1.3",
     "url-loader": "^0.5.9",
