--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "ui-component-loader": "^1.1.3",
     "url-loader": "^0.5.9",
     "webpack": "3.5.6",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-node-externals": "^1.6.0"
